include_HEADERS = \
	libregf.h

pkginclude_HEADERS = \
	libregf/codepage.h \
	libregf/definitions.h \
	libregf/error.h \
	libregf/extern.h \
	libregf/features.h \
	libregf/types.h

EXTRA_DIST = \
	libregf.h.in \
	libregf/definitions.h.in \
	libregf/features.h.in \
	libregf/types.h.in

DISTCLEANFILES = \
	libregf.h \
	libregf/definitions.h \
	libregf/features.h \
	libregf/types.h \
	Makefile \
	Makefile.in

