MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfwnt/libfwnt.vcproj \
	libregf/libregf.vcproj \
	libuna/libuna.vcproj \
	pyregf/pyregf.vcproj \
	regf_test_checksum/regf_test_checksum.vcproj \
	regf_test_data_block_key/regf_test_data_block_key.vcproj \
	regf_test_data_block_stream/regf_test_data_block_stream.vcproj \
	regf_test_data_type/regf_test_data_type.vcproj \
	regf_test_dirty_vector/regf_test_dirty_vector.vcproj \
	regf_test_error/regf_test_error.vcproj \
	regf_test_file/regf_test_file.vcproj \
	regf_test_file_header/regf_test_file_header.vcproj \
	regf_test_hive_bin/regf_test_hive_bin.vcproj \
	regf_test_hive_bin_cell/regf_test_hive_bin_cell.vcproj \
	regf_test_hive_bin_header/regf_test_hive_bin_header.vcproj \
	regf_test_hive_bins_list/regf_test_hive_bins_list.vcproj \
	regf_test_io_handle/regf_test_io_handle.vcproj \
	regf_test_key/regf_test_key.vcproj \
	regf_test_key_descriptor/regf_test_key_descriptor.vcproj \
	regf_test_key_item/regf_test_key_item.vcproj \
	regf_test_multi_string/regf_test_multi_string.vcproj \
	regf_test_named_key/regf_test_named_key.vcproj \
	regf_test_notify/regf_test_notify.vcproj \
	regf_test_security_key/regf_test_security_key.vcproj \
	regf_test_sub_key_list/regf_test_sub_key_list.vcproj \
	regf_test_support/regf_test_support.vcproj \
	regf_test_tools_info_handle/regf_test_tools_info_handle.vcproj \
	regf_test_tools_output/regf_test_tools_output.vcproj \
	regf_test_tools_signal/regf_test_tools_signal.vcproj \
	regf_test_value/regf_test_value.vcproj \
	regf_test_value_item/regf_test_value_item.vcproj \
	regf_test_value_key/regf_test_value_key.vcproj \
	regfexport/regfexport.vcproj \
	regfinfo/regfinfo.vcproj \
	regfmount/regfmount.vcproj \
	libregf.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	-rm -f Makefile

